--- a/sextant/src/componentStyling/NavBar.css
+++ b/sextant/src/componentStyling/NavBar.css
@@ -1,16 +1,46 @@
+/* NavBar.css */
 .nav {
-    background-color: rgba(53, 158, 228, 0.74);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 30px;
-    z-index: 9999;
-    display: flex; /* Use flexbox to center the content */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  /* Existing styles... */
+  position: fixed;
+  background-color: rgba(53, 158, 228, 0.74);
+  padding-left: 200px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  z-index: 9999;
+  display: flex;
+  justify-content: space-between; /* Add this to create space between "Sextant Dashboard" and "Hi" */
+  align-items: center;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  transition: 0.6s;
+  
+}
+
+.dashboard {
+  flex: 1; /* This will make "Sextant Dashboard" take all available space in the middle */
+  display: flex;
+  justify-content: center;
+  transition: 0.6s;
+
+}
+
+.clock {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-color: rgba(91, 242, 247, 0.455);
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 7px;
+  padding-bottom: 4px;
+  border-radius: 12px;
+  margin-right: 10px; /* Adjust this value as needed for spacing */
+  transition: 0.6s;
+}
+@media (max-width: 768px) {
+  .nav {
+    padding-left: 0; /* Set padding-left to zero when screen width is 768px or smaller */
   }
-  .container{
-    padding: 20px 10px 10px 10px;
-  }
+}
