--- a/sextant/src/componentStyling/Websocket.css
+++ b/sextant/src/componentStyling/Websocket.css
@@ -1,17 +1,32 @@
-.webwrapper{
+.webwrapper {
     padding: 10px 10px;
-}
-.webContainer{
+  }
+  
+  .webContainer {
     background-color: rgb(255, 255, 255);
-    padding:20px 40px 100px 20px;
-    border-radius:4px;
-    box-shadow: 1px 3px 10px #9c9999; 
-    color: rgb(201, 194, 194);
-    transition: 0.5s;
-    
-}
-.webContainer:hover{
+    padding: 20px 40px; /* Adjust padding as needed */
+    border-radius: 4px;
+    box-shadow: 1px 3px 10px #9c9999;
+    color: rgb(37, 36, 36);
+    transition: transform 0.2s ease-in; /* Apply transition to the transform property */
+    transform: translateY(20px); /* Start with translateY(0) */
+    width: 219px; /* Set a fixed width */
+    height: 200px; /* Set a fixed height */
+  }
+  
+  .webContainer:hover {
+    transform: translateY(16px); /* Apply translateY(16px) when hovered */
+    background-color: rgb(215, 240, 243);
+  }
+  
+  .webContainer.latency {
+    display: flex;
 
-    padding: 50px;
-    background-color: rgb(180, 23, 23);
-}
+    align-items: center;
+    flex-direction: column; /* Arrange items vertically */
+  }
+  
+  .center-content {
+    text-align: center;
+  }
+  
